# batespricer

./: .gitignore  README.md  pyproject.toml  recalibrated_models.json  requirements.txt
cache/: options_AAPL_20260208.json  options_^SPX_20260207.json  options_^SPX_20260208.json  options_^SPX_20260301.json
examples/: 1_calibration.ipynb  1_market_calibration.py  1_market_calibration_Ana.py  1_market_calibration_MC.py  1_market_calibration_MC_AAPL.py  1_market_calibration_MC_SPX.py  1a_market_calibration_Ana_naive.py  1b_market_calibration_Ana_accelerated.py  1c_market_calibration_MC_naive.py  1d_market_calibration_MC_accelerated.py  2_exotic_pricing.ipynb  2_exotic_pricing.py  3_barrierplot.py  4_finishingplot.py  4_validation_IVsurfaceplotting.py  4_validation_IVsurfaceplottingLight.py  4_validation_IVsurfaceplottinglarger.py  4_validation_IVsurfaceplottinglargerAPPLE.py  6_historical_backtest.py  7_price_surface.py  7_price_surface_light  7_price_surface_report_SPX  final_ultimate_plot.py
results/: calibration_Analytic_AAPL_20260208_020354_prices_FINAL_TRIMESH - Shortcut.lnk  calibration_Analytic_SPY_20260206_230026_meta.json  calibration_Analytic_SPY_20260206_230026_prices.csv  calibration_Analytic_^SPX_20260208_022951_meta.json  calibration_Analytic_^SPX_20260208_022951_prices.csv  calibration_Analytic_^SPX_20260208_022951_prices_FINAL_TRIMESH - Shortcut.lnk  calibration_MC_AAPL_20260208_020354_meta.json  calibration_MC_AAPL_20260208_022951_meta.json  calibration_MC_AAPL_20260208_022951_prices.csv  calibration_MC_NVDA_20260206_195235_meta.json  (+59 more)
tests/: __init__.py  (+1 more)
(+22 files in other folders)
