[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batespricer"  
version = "2.1.0"
description = "High-Performance Heston Calibration & Pricing Engine"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "matplotlib",
    "pytest",
    "yfinance"  
]

[tool.setuptools.packages.find]
where = ["src"]