[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batespricer"  
version = "1.1.0"
description = "Calibration and Pricing under the Bates Stochastic Volatility Model"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "matplotlib",
    "pandas",
    "requests",
    "scikit-learn",
    "nelson-siegel-svensson",
    "yfinance",
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]